--- a/app/assets/stylesheets/guest/layers/_sidebar.sass
+++ b/app/assets/stylesheets/guest/layers/_sidebar.sass
@@ -53,8 +53,9 @@
     justify-content: space-between
     background-color: $light-gray
     width: 400px
-    height: 200px
+    height: 175px
     padding: 15px
+    margin-top: 20px
     &_section
       position: relative
       background-color: $white
