--- a/app/views/guest/users/_sidebar.html.slim
+++ b/app/views/guest/users/_sidebar.html.slim
@@ -20,7 +20,7 @@
     / サブ写真
     .sidebar_sub_image
       .sidebar_sub_title
-        = image_tag 'l', class: 'img-label'
+        = image_tag 'sex_badge_l', class: 'img-label'
         h5 サブ写真追加
       .sidebar_sub_images
         = image_tag @user.user_profile.image1, class: "img-radius", size: '80'
