--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -14,11 +14,12 @@
           p
             | 無料登録完了後、コミュニティに参加し気になる人にいいね！を送りましょう♪
         .gender-badges
-          = image_tag 'l'
-          = image_tag 'g'
-          = image_tag 'b'
-          = image_tag 't'
-          = image_tag 's'
+          = image_tag 'sex_badge_l'
+          = image_tag 'sex_badge_g'
+          = image_tag 'sex_badge_b'
+          = image_tag 'sex_badge_t'
+          = image_tag 'sex_badge_s'
+          = image_tag 'sex_badge_o'
         .registration-btns
           = link_to user_facebook_omniauth_authorize_path, class: 'facebook_button' do
             i.fa.fa-facebook
