--- a/app/assets/stylesheets/guest/_settings.sass
+++ b/app/assets/stylesheets/guest/_settings.sass
@@ -27,7 +27,7 @@ $yellow: #FEC719
 $pink: #DF3BCF
 $green: #37B42C
 
-$dark-gray: #bbb
+$dark-gray: #6E6E6E
 $primary: $green
 $danger: $red
 $success: #5CB85C
