--- a/app/assets/stylesheets/guest/layers/_preview.sass
+++ b/app/assets/stylesheets/guest/layers/_preview.sass
@@ -33,3 +33,25 @@
     opacity: 0.8
     filter: alpha(opacity=80)
     -ms-filter: "alpha(opacity=80)"
+
+.modal
+  display:none
+  max-height: 90%
+.modalBody
+  overflow-y: scroll
+  position: fixed
+  z-index: 1000
+  background: #fff
+  width: 690px
+  left: 50%
+  top: 60%
+  height: 400px
+.modalBK
+  position: fixed
+  z-index: 999
+  height: 100%
+  width: 100%
+  background: #000
+  opacity: 0.9
+  filter: alpha(opacity=90)
+  -moz-opacity: 0.90
