--- a/app/views/guest/users/edit.html.slim
+++ b/app/views/guest/users/edit.html.slim
@@ -24,15 +24,15 @@
             .row
               .col-md-12.select
                 .form-group
-                  label
-                    | 生年月日
-                  == sprintf( f.date_select(
-                  -                           :birthday,
-                  -                           use_month_numbers: true,
-                  -                           start_year: 1930,
-                  -                           end_year:   (Time.now.year - 18),
-                  -                           default:    Date.new(1980, 1, 1),
-                  -                           date_separator: '%s', datetime_separator: '%s' ), '年', '月') + '日'
+                  / label
+                  /   | 生年月日
+                  / == sprintf( f.date_select(
+                  / - birthday:,
+                  / - use_month_numbers: true,
+                  / - start_year: 1930,
+                  / - end_year:   (Time.now.year - 18),
+                  / - default:    Date.new(1980, 1, 1),
+                  / - date_separator: '%s', datetime_separator: '%s' ), '年', '月') + '日'
             .row
               .col-md-12.select
                 .form-group
