さがす画面修正

--- a/app/assets/stylesheets/guest/_style.sass
+++ b/app/assets/stylesheets/guest/_style.sass
@@ -70,6 +70,9 @@ a
     @media (max-width: $screen-max-tablet)
       width: 100%
       margin: 0 0 10px
+  &_banner
+    img
+      margin: 0
   &_footer
     border-top: 1px solid #ccc
     background: darken($light-gray, 4%)
