--- a/app/views/guest/users/_sidebar.html.slim
+++ b/app/views/guest/users/_sidebar.html.slim
@@ -6,11 +6,12 @@
     = link_to '相手から見た自分のプロフィールを確認', user_preview_path(current_user), class: 'sidebar_preview_button'
     / プロフィール写真
     .sidebar_image
-      = image_tag @user.image, class: "img-radius", size: '400' if @user.image?
+      = image_tag @user.user_profile.image1, class: "img-radius", size: '400'
       .sidebar_badge
-        = image_tag 'l', class: "img-badge"
+        = image_tag "sex_badge_#{@user.user_profile.sex}", class: "img-badge"
+        / Todo:バッジ画像着たら修正
         - unless @user.user_profile.play_style.blank?
-          = image_tag 'l', class: "img-badge"
+          = image_tag "sex_badge_#{@user.user_profile.sex}", class: "img-badge"
     / ユーザー情報
     ul.sidebar_user
       li.sidebar_user_name = @user.name if @user.name?
@@ -20,6 +21,7 @@
     / サブ写真
     .sidebar_sub_image
       .sidebar_sub_title
+        / Todo:バッジ画像着たら修正
         = image_tag 'sex_badge_l', class: 'img-label'
         h5 サブ写真追加
       .sidebar_sub_images
