--- a/app/assets/stylesheets/guest/layers/_preview.sass
+++ b/app/assets/stylesheets/guest/layers/_preview.sass
@@ -4,7 +4,7 @@
     padding: 0
     list-style: none
   .main
-    margin-bottom: 5px
+    margin-bottom: 30px
   .main li
     width: 400px
     height: 400px
@@ -33,6 +33,12 @@
     opacity: 0.8
     filter: alpha(opacity=80)
     -ms-filter: "alpha(opacity=80)"
+    margin-bottom: 0
+  .img-radius
+    border: 2px solid $red
+    border-radius: 5px
+    -webkit-border-radius: 5px
+    -moz-border-radius: 5px
 
 .modal
   display:none
