--- a/app/assets/stylesheets/guest/layers/_preview.sass
+++ b/app/assets/stylesheets/guest/layers/_preview.sass
@@ -61,3 +61,12 @@
   opacity: 0.9
   filter: alpha(opacity=90)
   -moz-opacity: 0.90
+.preview_button
+  @extend %button
+  @extend %button_red
+  @extend %button_large
+  width: 100%
+  padding: 20px
+  font-size: 18px
+
+
