--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -17,7 +17,7 @@
 
 .panelList_section
   - @user_profiles.each do |user|
-    = link_to user_preview_path(user) do
+    = link_to search_path(user) do
       .card_content
         .card_image
           = image_tag user.image1, size: '236', class: 'img-radius'
