--- a/app/views/guest/users/preview.html.slim
+++ b/app/views/guest/users/preview.html.slim
@@ -22,7 +22,8 @@
         li.thumb4
           = user_image(@user.user_profile.image3)
 
-    = render 'button_link'
+    .preview_button
+      = render 'button_link'
 
   / mypage右サイド
   #layout_right
