--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -14,7 +14,7 @@
 /       .modal-body
 /         = render 'search'
 
-
+= paginate @user_profiles
 .panelList_section
   - @user_profiles.each do |user|
     = link_to search_path(user) do
@@ -28,3 +28,4 @@
           .card_name = user.user.name
         .card_footer
           .card_good = good(user.user)
+= paginate @user_profiles
