いいねページ&メッセージページスタイルスイカ

--- a/app/assets/stylesheets/guest/_style.sass
+++ b/app/assets/stylesheets/guest/_style.sass
@@ -70,6 +70,15 @@ a
     @media (max-width: $screen-max-tablet)
       width: 100%
       margin: 0 0 10px
+  &_message
+    @media (min-width: $screen-max-tablet)
+      // float: left
+      width: 50%
+      // margin-left: 20px
+    // SP
+    @media (max-width: $screen-max-tablet)
+      width: 100%
+      margin: 0 0 10px
   &_banner
     img
       margin: 0
