--- a/app/views/guest/murmurs/index.html.slim
+++ b/app/views/guest/murmurs/index.html.slim
@@ -6,7 +6,7 @@
   #layout_right
     .mypage_profile_section
       .mypage_profile_label
-        .edit_title = '自分の投稿'
+        .edit_title = 'みんなの投稿'
         .edit_button = link_to '投稿する',new_murmur_path, class: 'btn btn-danger'
       .mypage_profile_body
         = render @murmurs
