--- a/app/assets/stylesheets/guest/modules/_tab.sass
+++ b/app/assets/stylesheets/guest/modules/_tab.sass
@@ -1,15 +1,18 @@
 .tab
   &_header
-    padding: 30px 60px
+    padding: 20px
     display: flex
+    justify-content: space-between
     .select
       background: $red
   &_bottun
-    width: 150px
+    width: 48%
     text-align: center
-    background: $light-gray
+    background: $gray
     color: $white
-    font-size: 20px
+    font-size: 22px
+    padding: 15px
+    border-radius: 10px
   &_message
     display: none
   &_content
