--- a/app/views/guest/likes/index.html.slim
+++ b/app/views/guest/likes/index.html.slim
@@ -1,8 +1,8 @@
 #layout_banner
   = image_tag 'premire_baner', width: '100%', class: 'baner-image'
 .tab_header
-  .tab_bottun.select タブ1
-  .tab_bottun タブ2
+  .tab_bottun.select お相手からのイイね
+  .tab_bottun マッチングメール
 
 
 .tab_content
