--- a/app/views/guest/communities/index.html.slim
+++ b/app/views/guest/communities/index.html.slim
@@ -4,19 +4,21 @@
   .tab_bottun.select コミュニティ検索
   .tab_bottun マイコミュニティ
 
+
 button.btn.btn-primary.btn-lg[type="button" data-toggle="modal" data-target="#sampleModal"]
-  |  検索
+  |  コミュニティ作成
 #sampleModal.modal.fade[tabindex="-1"]
   .modal-dialog
-    .modal-content
-      .modal-header
-        button.close[type="button" data-dismiss="modal"]
-          span
-            | ×
-        h3.modal-title
-          | 検索
-      .modal-body
-        = render 'form'
+    .modal-margin
+      .modal-content
+        .modal-header
+          button.close[type="button" data-dismiss="modal"]
+            span
+              | ×
+          h3.modal-title
+            | 検索
+        .modal-body
+          = render 'form'
 
 .tab_content
   .panelList_section
