--- a/app/views/guest/module/_likelink.html.slim
+++ b/app/views/guest/module/_likelink.html.slim
@@ -2,3 +2,7 @@
   = good(@user)
 - if controller_name == 'likes'
   = link_to 'ありがとう', match_like_path(current_user, target: @user)
+- if controller_name == 'messages'
+  = link_to 'メッセージを送る', messages_path(current_user, target: @user)
+
+= 'へいへい'
