コミュニティトピック追加

--- a/app/assets/stylesheets/guest/modules/_panel.sass
+++ b/app/assets/stylesheets/guest/modules/_panel.sass
@@ -1,5 +1,11 @@
-.panelList_section
-  overflow: hidden
-  padding: 20px
-  img
-    margin: 0
+.panelList
+  &_section
+    overflow: hidden
+    padding: 20px
+    img
+      margin: 0
+  &_community_section
+    overflow: hidden
+    padding: 20px
+    img
+      margin: 0
