--- a/app/assets/stylesheets/guest/layers/_community.sass
+++ b/app/assets/stylesheets/guest/layers/_community.sass
@@ -29,3 +29,26 @@
     font-size: 18px
     width: 75%
     margin: 0 auto
+  &_detail
+    display: flex
+    // justify-content: space-between
+    .img-radius
+      border-radius: 15px
+    &_body
+      margin-left: 20px
+    &_name
+      color: $red
+      font-weight: bold
+  &_futter
+    clear: both
+
+  &_join_button
+    @extend %button
+    @extend %button_red
+    @extend %button_small
+    display: block
+    padding: 16px 50px
+    margin: 30px auto
+    font-size: 18px
+    width: 50%
+
