--- a/app/views/guest/communities/detail.html.slim
+++ b/app/views/guest/communities/detail.html.slim
@@ -18,41 +18,42 @@
             = render 'form'
 
 .tab_header
-  .tab_bottun.select コミュニティ検索
+  = link_to 'コミュニティ検索', communities_path, class: 'tab_bottun select'
   .tab_bottun マイコミュニティ
 
 .tab_content
   .panelList_section
-    .community_ranking
-      h5 人気コミュニティ
-      - @pickup_communities.each do |community|
-        = link_to detail_community_path(community) do
-          .community_content
-            .community_image
-              = image_tag community.image, size: '180', class: 'img-radius'
-            .community_body
-              .community_name = 'コミュニティ名'
-              .community_num = '( 123 名)'
-            .community_footer
-
+    .community_detail
+      .community_detail_image
+        = image_tag @community.image, size: '200', class: 'img-radius'
+      .community_detail_body
+        .community_detail_name
+          = @community.name
+        .community_detail_explain
+          = @community.introduce
 
     hr
     .community_list
-      h5 = 'コミュニティ一覧'
-      - @communities.each do |community|
-        = link_to detail_community_path(community) do
+      h5 = '参加者一覧'
+      - @users.limit(5).each do |user|
+        = link_to search_path(user) do
           .community_content
             .community_image
-              = image_tag community.image, size: '180', class: 'img-radius'
+              = image_tag user.user_profile.image1, size: '160', class: 'img-radius'
             .community_body
               .community_name = 'コミュニティ名'
               .community_num = '( 123 名)'
             .community_footer
 
+    .community_futter
+      - if current_user.join_communities.find_by(community: @community)
+        = link_to '参加済み', root_path,class: 'community_join_button'
+      - else
+        = link_to '参加する', join_community_path(community_id: @community),class: 'community_join_button '
 .tab_content.tab_message
   .panelList_section
     .community_list
-      h5 = link_to 'マイコミュニティ', new_community_path
+      h5 = link_to 'コミュニティ', new_community_path
       - @communities.limit(5).each do |community|
         = link_to community_path(community) do
           .community_content
