--- a/app/views/guest/topics/_form.html.slim
+++ b/app/views/guest/topics/_form.html.slim
@@ -5,4 +5,4 @@
   = f.text_area :body
   = f.hidden_field :community_id, value: @community.id
   = f.hidden_field :user_id, value: current_user.id
-  = f.submit '保存', data: { confirm: 'この内容で保存してもいいですか', disable_with: '処理中...' }
+  = f.submit '保存'
