つぶやきにコメント機能追加

--- a/app/views/guest/murmur_comments/_form.html.slim
+++ b/app/views/guest/murmur_comments/_form.html.slim
@@ -1,5 +1,5 @@
-= @murmur_comment.inspect
-= @murmur.inspect
+/ = @murmur_comment.inspect
+/ = @murmur.inspect
 = form_for(@murmur_comment) do |f|
   = f.label :comment, '投稿'
   = f.text_area :comment
